fix style on safari

--- a/src/src/routes/Account/Referral/Referral.css
+++ b/src/src/routes/Account/Referral/Referral.css
@@ -21,9 +21,11 @@
 	position: relative;
 	background: url('media/svgs/white-curve.svg') center top no-repeat;
 	background-size: 130% 20%;
+	-webkit-background-size: auto 100px;
 
 	@media ScreenSMMin {
 		background-size: 100% 35%;
+		-webkit-background-size: contain;
 	}
 }
 
